# bit

./: .gitignore  10K-deja.json  10K.json  10K2.json  10KSansDroidFallback.json  1bigpinkpngpic.json  1bigpngpic.json  1pngpic.json  2pngpic.json  3pngpic.json  CMakeLists.txt  README.md  XCBWindow.cpp  XCBWindow.h  bit.cpp  bitwindow.cpp  bitwindow.h  gtkbit.cpp  logging.cpp  logging.h  scene.json  scene2.json  scene3.json  sdlaux.cpp  sdlbit.cpp  type.cpp  typewindow.h  ui.json
XCB/: CMakeLists.txt  XCBWindow.cpp  XCBWindow.h  xcb_shm.c
anim/: CMakeLists.txt  anim.cpp  bitbuffer.h  engine.cpp  engine.h  geometry.h  parse_json_utils.cpp  parse_json_utils.h  read_JPEG_file.cpp  read_JPEG_file.h  read_png_file.cpp  read_png_file.h  scene.h  scene_builder.cpp  scene_builder.h
bit/: CMakeLists.txt  bit.cpp  bitbuffer.h  bitwindow.cpp  bitwindow.h  jstest.cpp  parse_json_dom.cpp  parse_json_dom.h  parse_json_utils.cpp  parse_json_utils.h  read_png_file.cpp  scene.h  scene_builder.cpp  shmtrial.cpp  shmwindow.cpp  shmwindow.h  xcbshmtest.cpp
cmjson/: CMakeLists.txt  JSValue.cpp  JSValue.h  parse_json_dom.cpp  parse_json_dom.h
gtk/: CMakeLists.txt  bitgtk.cpp  glgtkbit.cpp  glgtkgears.cpp  gtkbit.cpp
html/: CMakeLists.txt  html.cpp  html.h  test1.html  test2.html  test3.html
opengl/: CMakeLists.txt  breakout.cpp  game.cpp  game.h  my_sprites.cpp  shader_utils.cpp  sprites.cpp  twodee.cpp
opengl/breakout/: CMakeLists.txt  breakout.cpp  game.cpp  resource_manager.cpp  sprites.f.glsl  sprites.v.glsl
sdl/: CMakeLists.txt  cleanup.h  layerguy.cpp  res_path.h  respathtest.cpp  sdlbit.cpp  sdllessons.cpp
type/: CMakeLists.txt  typewindow.cpp
win64/: CMakeLists.txt  win.cpp
